// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render SWITCH_CONTROL correctly with default value to false 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "SWITCH_CONTROL",
      "values": Object {},
    }
  }
  eventHandler={[Function]}
>
  <ControlSwitch
    onSubmit={[Function]}
    value={false}
  >
    <Switch
      checked={false}
      kind="success"
      onClick={[Function]}
    >
      <div
        checked={false}
        className="Switch__Switch-iwxo jSKZSz"
        kind="success"
        onClick={[Function]}
      />
    </Switch>
  </ControlSwitch>
</DataChannelAdapter>
`;

exports[`should render SWITCH_CONTROL correctly with false value 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "SWITCH_CONTROL",
      "values": Object {
        "value": 0,
      },
    }
  }
  eventHandler={[Function]}
>
  <ControlSwitch
    onSubmit={[Function]}
    value={false}
  >
    <Switch
      checked={false}
      kind="success"
      onClick={[Function]}
    >
      <div
        checked={false}
        className="Switch__Switch-iwxo jSKZSz"
        kind="success"
        onClick={[Function]}
      />
    </Switch>
  </ControlSwitch>
</DataChannelAdapter>
`;

exports[`should render SWITCH_CONTROL correctly with true value 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "SWITCH_CONTROL",
      "values": Object {
        "value": 1,
      },
    }
  }
  eventHandler={[Function]}
>
  <ControlSwitch
    onSubmit={[Function]}
    value={true}
  >
    <Switch
      checked={true}
      kind="success"
      onClick={[Function]}
    >
      <div
        checked={true}
        className="Switch__Switch-iwxo ipuZOX"
        kind="success"
        onClick={[Function]}
      />
    </Switch>
  </ControlSwitch>
</DataChannelAdapter>
`;
